bug header bouton mobile

--- a/style.css
+++ b/style.css
@@ -864,7 +864,7 @@ h2{
     }
     .fullleft-buttonmid{
         display: block;
-        max-width: 70%;
+        max-width: 90%;
         margin-top: 90px;
     }
     .fullleft-buttonmid a:last-child {
